crates/pcb-zen/tests/snapshots/input__module_io_rejects_interface_when_net_expected.snap
---
source: crates/pcb-zen/tests/input.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
    (net (code "1") (name "SIG_signal")
    )
  )
)
Advice: [TEMP_DIR]parent.zen Net name 'SIG_signal' should be UPPERCASE: 'SIG_SIGNAL'

Error: Input 'signal' (type) has wrong type for this placeholder: expected Net, got SingleNet(signal=Net(name: "SIG_signal", id: <ID>))
   ╭─[ [TEMP_DIR]child.zen:2:10 ]
   │
 2 │ signal = io("signal", Net)
   │          ────────┬────────  
   │                  ╰────────── Input 'signal' (type) has wrong type for this placeholder: expected Net, got SingleNet(signal=Net(name: "SIG_signal", id: <ID>))
   │
   ├─[ [TEMP_DIR]parent.zen:8:1 ]
   │
 8 │ Child(name="child1", signal=sig_if)  # Should fail - interface not accepted for Net io
   │ ─────────────────┬─────────────────  
   │                  ╰─────────────────── Error instantiating `child`
───╯
